--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
-
+<!--get the picture from the link-->
 <P>View astronomy pictures from NASA's<a href="http://apod.nasa.gov/apod/astropix.html">
     Astronomy Picture of the Day</a> service</p>
+<!--button template to choose daily or random-->
 {{> navigation}}
