--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<!--/* everything else will extend this*/-->
 <head>
     <title>{{title}}</title>
+    <!--added bootstrap-->
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
