--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,3 +1,5 @@
+<!--/*navigation buttons that other templates can include*/-->
+<!--/*todo--add All Favorite button--*/-->
 <form id="navigation" action="fetch_picture">
     <input id="today_picture" name="today" class="btn btn-info" type="submit"
            value="Today's Picture">
