Updated navigation and added favorites page

--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,10 +1,17 @@
 <!--/*navigation buttons that other templates can include*/-->
 <!--/*todo--add All Favorite button--*/-->
 <form id="navigation" action="fetch_picture">
-    <input id="today_picture" name="today" class="btn btn-info" type="submit"
+    <input id="today_picture" name="today"
+           class="btn btn-info" type="submit"
            value="Today's Picture">
     <input id="random_picture" name="random"
-           class="btn btn-info"
-           type="submit"
+           class="btn btn-info" type="submit"
            value="Random Picture">
+</form>
+
+<!--add a button to link to favorites page-->
+<form id="get_favorites" action="favorites">
+    <input id="today_picture" name="today"
+    class="btn btn-primary" type="submit"
+    value="Favorites">
 </form>
