--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,33 @@
 body {
-  padding: 20px;
+  padding: 15px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: blanchedalmond;
+  background-color: whitesmoke;
 }
 img {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 a {
   color: #00B7FF;
+}
+
+/*add styling to form/etc*/
+
+form {
+  padding: 10px 0 10px 0;
+}
+
+.favitem {
+  padding: 20px 0 20px 0;
+}
+.favimage {
+  width: 200px;
+  display: inline;
+  border: 2px solid;
+}
+
+.favdate, .favtitle {
+  display: inline;
+  padding: 20px;
 }
