--- a/views/picture.hbs
+++ b/views/picture.hbs
@@ -15,7 +15,7 @@
 
 <p><a href="{{ apod.nasa_url }}">See this image at NASA website</a></p>
 
-<!--add a botton for favorites-->
+<!--add a button for favorites-->
 <div class="addToFavorites">
     <form action="favorites/add" method="post">
         <input type="hidden" name="date" value="{{apod.date}}">
