Delete working, updating API

--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -18,7 +18,7 @@
             <!--<input type="hidden" name="title" value="{{apod.title}}">-->
             <!--<input type="hidden" name="url" value="{{apod.url}}">-->
             <!--<input type="hidden" name="nasa_url" value="{{apod.nasa_url}}">-->
-            <input type="submit" class="btn btn-success" name="add" value="Remove From Favorites">
+            <input type="submit" class="btn btn-danger" name="delete" value="Remove From Favorites">
         </form>
     </div>
     <br><br><br><br>
