--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -3,7 +3,7 @@
 {{#each favorites}}
     <div class="favitem">
         <a href="{{this.nasa_url}}">
-            <img class="faveimage" src="{{this.url}}">
+            <img class="favimage" src="{{this.url}}">
         </a><br>
         <p class="favtitle">{{this.title}}</p>
         <p class="favdate">{{this.date}}</p>
